--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 
 <body>
 
-
+<div></div>
     <div class="clock">
         <div class="clock-face">
             <div class="hand hour-hand"></div>
